OAK-12366: bump elasticsearch to v 9.5.3 (#3120)
* OAK-12366: remove test using dutch_kp stemmer (not supported since 9.x)

* OAK-12366: (toxiproxy) fix deprecation warnings

* OAK-12366: bump elasticsearch-java to 9.5.1

* OAK-12366: merge main

* OAK-12366: bump es to 9.5.3

* OAK-12366: fix compilation issues in test

* OAK-12366: fix osgi bundle

* OAK-12366: add FT to force HTTP/1

* OAK-12366: move FT in non-exported package

* OAK-12366: minor